IRIS_VST/build_output_wall.txt
[ 31%] Built target IRIS_V2
[ 33%] Built target IRIS_V2_vst3_helper
[ 49%] Built target IRIS_V2_VST3
[ 50%] Building CXX object CMakeFiles/IRIS3.dir/Source/V3/WallListComponent.cpp.o
In file included from /Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponent.cpp:1:
In file included from /Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponentV3.h:4:
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/PluginProcessorV3.h:62:16: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
   62 |         if (l2 == 0) return std::sqrt((px-x1)*(px-x1) + (py-y1)*(py-y1));
      |             ~~ ^  ~
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponent.cpp:8:7: warning: field 'processor' will be initialized after field 'wallId' [-Wreorder-ctor]
    8 |     : processor(p), wallId(id)
      |       ^~~~~~~~~~~~  ~~~~~~~~~~
      |       wallId(id)    processor(p)
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponent.cpp:114:24: warning: 'Font' is deprecated: Use the constructor that takes a FontOptions argument [-Wdeprecated-declarations]
  114 |     titleLabel.setFont(juce::Font(16.0f, juce::Font::bold));
      |                        ^
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/JUCE/modules/juce_graphics/fonts/juce_Font.h:76:7: note: 'Font' has been explicitly marked deprecated here
   76 |     [[deprecated ("Use the constructor that takes a FontOptions argument")]]
      |       ^
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponent.cpp:114:24: warning: 'Font' is deprecated: Use the constructor that takes a FontOptions argument [-Wdeprecated-declarations]
  114 |     titleLabel.setFont(juce::Font(16.0f, juce::Font::bold));
      |                        ^
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/JUCE/modules/juce_graphics/fonts/juce_Font.h:76:7: note: 'Font' has been explicitly marked deprecated here
   76 |     [[deprecated ("Use the constructor that takes a FontOptions argument")]]
      |       ^
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponent.cpp:119:22: error: no member named 'setLayoutMode' in 'juce::Component'
  119 |     contentContainer.setLayoutMode(juce::FlexBox::LayoutMode::column);
      |     ~~~~~~~~~~~~~~~~ ^
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponent.cpp:119:51: error: no member named 'LayoutMode' in 'juce::FlexBox'
  119 |     contentContainer.setLayoutMode(juce::FlexBox::LayoutMode::column);
      |                                    ~~~~~~~~~~~~~~~^
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponent.cpp:138:16: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  138 |          items[i]->setBounds(0, i*35, contentContainer.getWidth(), 30);
      |          ~~~~~ ^
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponent.cpp:134:77: warning: implicit conversion loses integer precision: 'size_type' (aka 'unsigned long') to 'int' [-Wshorten-64-to-32]
  134 |     contentContainer.setBounds(0, 0, viewport.getWidth() - 15, items.size() * 35);
      |                      ~~~~~~~~~                                 ~~~~~~~~~~~~~^~~~
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponent.cpp:136:20: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
  136 |     for (int i=0; i<items.size(); ++i)
      |                   ~^~~~~~~~~~~~~
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponent.cpp:155:54: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  155 |              if (items[i]->wallId != processor.walls[i].id) {
      |                                      ~~~~~~~~~       ^
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponent.cpp:155:24: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  155 |              if (items[i]->wallId != processor.walls[i].id) {
      |                  ~~~~~ ^
/Users/luna/Documents/Research/Codes/IRIS/IRIS_VST/Source/V3/WallListComponent.cpp:154:24: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
  154 |         for (int i=0; i<items.size(); ++i) {
      |                       ~^~~~~~~~~~~~~
10 warnings and 2 errors generated.
make[2]: *** [CMakeFiles/IRIS3.dir/Source/V3/WallListComponent.cpp.o] Error 1
make[1]: *** [CMakeFiles/IRIS3.dir/all] Error 2
make: *** [all] Error 2
